blindtex/converter/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> content
Rule 2     start -> start content
Rule 3     block -> BEGINBLOCK content ENDBLOCK
Rule 4     content -> block
Rule 5     content -> scripted
Rule 6     content -> command
Rule 7     content -> content content
Rule 8     char -> CHAR
Rule 9     char -> ord
Rule 10    ord -> ORD
Rule 11    command -> frac
Rule 12    command -> char
Rule 13    command -> root
Rule 14    command -> array
Rule 15    command -> col
Rule 16    command -> factorial
Rule 17    command -> larop
Rule 18    command -> prime
Rule 19    command -> binop
Rule 20    command -> binrel
Rule 21    command -> not
Rule 22    command -> function
Rule 23    command -> arrow
Rule 24    command -> delimiter
Rule 25    command -> accent
Rule 26    command -> style
Rule 27    command -> dots
Rule 28    command -> lim
Rule 29    command -> combi
Rule 30    command -> unknown
Rule 31    command -> pmod
Rule 32    command -> lnbrk
Rule 33    scripted -> command SUP command
Rule 34    scripted -> command SUP block
Rule 35    scripted -> block SUP command
Rule 36    scripted -> block SUP block
Rule 37    scripted -> command SUB command
Rule 38    scripted -> command SUB block
Rule 39    scripted -> block SUB command
Rule 40    scripted -> block SUB block
Rule 41    scripted -> command SUP command SUB command
Rule 42    scripted -> command SUP command SUB block
Rule 43    scripted -> command SUP block SUB command
Rule 44    scripted -> command SUP block SUB block
Rule 45    scripted -> block SUP command SUB command
Rule 46    scripted -> block SUP command SUB block
Rule 47    scripted -> block SUP block SUB command
Rule 48    scripted -> block SUP block SUB block
Rule 49    scripted -> command SUB command SUP command
Rule 50    scripted -> command SUB command SUP block
Rule 51    scripted -> command SUB block SUP command
Rule 52    scripted -> command SUB block SUP block
Rule 53    scripted -> block SUB command SUP command
Rule 54    scripted -> block SUB command SUP block
Rule 55    scripted -> block SUB block SUP command
Rule 56    scripted -> block SUB block SUP block
Rule 57    frac -> FRAC command command
Rule 58    frac -> FRAC command block
Rule 59    frac -> FRAC block command
Rule 60    frac -> FRAC block block
Rule 61    root -> ROOT command
Rule 62    root -> ROOT block
Rule 63    root -> ROOT KDELIMITER content KDELIMITER command
Rule 64    root -> ROOT KDELIMITER content KDELIMITER block
Rule 65    binop -> BINOP
Rule 66    binop -> KBINOP
Rule 67    binrel -> BINREL
Rule 68    binrel -> KBINREL
Rule 69    not -> NOT
Rule 70    function -> FUNC
Rule 71    larop -> LARGEOP SUB command SUP command
Rule 72    larop -> LARGEOP SUB command SUP block
Rule 73    larop -> LARGEOP SUB block SUP command
Rule 74    larop -> LARGEOP SUB block SUP block
Rule 75    larop -> LARGEOP SUP command SUB command
Rule 76    larop -> LARGEOP SUP command SUB block
Rule 77    larop -> LARGEOP SUP block SUB command
Rule 78    larop -> LARGEOP SUP block SUB block
Rule 79    larop -> LARGEOP
Rule 80    larop -> LARGEOP SUB command
Rule 81    larop -> LARGEOP SUB block
Rule 82    arrow -> ARROW
Rule 83    delimiter -> DELIMITER
Rule 84    delimiter -> KDELIMITER
Rule 85    accent -> ACCENT command
Rule 86    accent -> ACCENT block
Rule 87    style -> STYLE command
Rule 88    style -> STYLE block
Rule 89    dots -> DOTS
Rule 90    lim -> LIM
Rule 91    lim -> LIM SUB command
Rule 92    lim -> LIM SUB block
Rule 93    unknown -> UNKNOWN
Rule 94    array -> BEGARRAY row ENDARRAY
Rule 95    row -> column LINEBREAK row
Rule 96    row -> column
Rule 97    column -> content col column
Rule 98    column -> content
Rule 99    col -> COL
Rule 100   factorial -> !
Rule 101   prime -> '
Rule 102   combi -> choose
Rule 103   combi -> binom
Rule 104   choose -> command CHOOSE command
Rule 105   choose -> command CHOOSE block
Rule 106   choose -> block CHOOSE command
Rule 107   choose -> block CHOOSE block
Rule 108   binom -> BINOM command command
Rule 109   binom -> BINOM command block
Rule 110   binom -> BINOM block command
Rule 111   binom -> BINOM block block
Rule 112   pmod -> PMOD command
Rule 113   pmod -> PMOD block
Rule 114   lnbrk -> LINEBREAK

Terminals, with rules where they appear

!                    : 100
'                    : 101
ACCENT               : 85 86
ARROW                : 82
BEGARRAY             : 94
BEGINBLOCK           : 3
BINOM                : 108 109 110 111
BINOP                : 65
BINREL               : 67
CHAR                 : 8
CHOOSE               : 104 105 106 107
COL                  : 99
DELIMITER            : 83
DOTS                 : 89
ENDARRAY             : 94
ENDBLOCK             : 3
FRAC                 : 57 58 59 60
FUNC                 : 70
KBINOP               : 66
KBINREL              : 68
KDELIMITER           : 63 63 64 64 84
LARGEOP              : 71 72 73 74 75 76 77 78 79 80 81
LIM                  : 90 91 92
LINEBREAK            : 95 114
NOT                  : 69
ORD                  : 10
PMOD                 : 112 113
ROOT                 : 61 62 63 64
STYLE                : 87 88
SUB                  : 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 71 72 73 74 75 76 77 78 80 81 91 92
SUP                  : 33 34 35 36 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 71 72 73 74 75 76 77 78
UNKNOWN              : 93
error                : 

Nonterminals, with rules where they appear

accent               : 25
array                : 14
arrow                : 23
binom                : 103
binop                : 19
binrel               : 20
block                : 4 34 35 36 36 38 39 40 40 42 43 44 44 45 46 46 47 47 48 48 48 50 51 52 52 53 54 54 55 55 56 56 56 58 59 60 60 62 64 72 73 74 74 76 77 78 78 81 86 88 92 105 106 107 107 109 110 111 111 113
char                 : 12
choose               : 102
col                  : 15 97
column               : 95 96 97
combi                : 29
command              : 6 33 33 34 35 37 37 38 39 41 41 41 42 42 43 43 44 45 45 46 47 49 49 49 50 50 51 51 52 53 53 54 55 57 57 58 59 61 63 71 71 72 73 75 75 76 77 80 85 87 91 104 104 105 106 108 108 109 110 112
content              : 1 2 3 7 7 63 64 97 98
delimiter            : 24
dots                 : 27
factorial            : 16
frac                 : 11
function             : 22
larop                : 17
lim                  : 28
lnbrk                : 32
not                  : 21
ord                  : 9
pmod                 : 31
prime                : 18
root                 : 13
row                  : 94 95
scripted             : 5
start                : 2 0
style                : 26
unknown              : 30

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . content
    (2) start -> . start content
    (4) content -> . block
    (5) content -> . scripted
    (6) content -> . command
    (7) content -> . content content
    (3) block -> . BEGINBLOCK content ENDBLOCK
    (33) scripted -> . command SUP command
    (34) scripted -> . command SUP block
    (35) scripted -> . block SUP command
    (36) scripted -> . block SUP block
    (37) scripted -> . command SUB command
    (38) scripted -> . command SUB block
    (39) scripted -> . block SUB command
    (40) scripted -> . block SUB block
    (41) scripted -> . command SUP command SUB command
    (42) scripted -> . command SUP command SUB block
    (43) scripted -> . command SUP block SUB command
    (44) scripted -> . command SUP block SUB block
    (45) scripted -> . block SUP command SUB command
    (46) scripted -> . block SUP command SUB block
    (47) scripted -> . block SUP block SUB command
    (48) scripted -> . block SUP block SUB block
    (49) scripted -> . command SUB command SUP command
    (50) scripted -> . command SUB command SUP block
    (51) scripted -> . command SUB block SUP command
    (52) scripted -> . command SUB block SUP block
    (53) scripted -> . block SUB command SUP command
    (54) scripted -> . block SUB command SUP block
    (55) scripted -> . block SUB block SUP command
    (56) scripted -> . block SUB block SUP block
    (11) command -> . frac
    (12) command -> . char
    (13) command -> . root
    (14) command -> . array
    (15) command -> . col
    (16) command -> . factorial
    (17) command -> . larop
    (18) command -> . prime
    (19) command -> . binop
    (20) command -> . binrel
    (21) command -> . not
    (22) command -> . function
    (23) command -> . arrow
    (24) command -> . delimiter
    (25) command -> . accent
    (26) command -> . style
    (27) command -> . dots
    (28) command -> . lim
    (29) command -> . combi
    (30) command -> . unknown
    (31) command -> . pmod
    (32) command -> . lnbrk
    (57) frac -> . FRAC command command
    (58) frac -> . FRAC command block
    (59) frac -> . FRAC block command
    (60) frac -> . FRAC block block
    (8) char -> . CHAR
    (9) char -> . ord
    (61) root -> . ROOT command
    (62) root -> . ROOT block
    (63) root -> . ROOT KDELIMITER content KDELIMITER command
    (64) root -> . ROOT KDELIMITER content KDELIMITER block
    (94) array -> . BEGARRAY row ENDARRAY
    (99) col -> . COL
    (100) factorial -> . !
    (71) larop -> . LARGEOP SUB command SUP command
    (72) larop -> . LARGEOP SUB command SUP block
    (73) larop -> . LARGEOP SUB block SUP command
    (74) larop -> . LARGEOP SUB block SUP block
    (75) larop -> . LARGEOP SUP command SUB command
    (76) larop -> . LARGEOP SUP command SUB block
    (77) larop -> . LARGEOP SUP block SUB command
    (78) larop -> . LARGEOP SUP block SUB block
    (79) larop -> . LARGEOP
    (80) larop -> . LARGEOP SUB command
    (81) larop -> . LARGEOP SUB block
    (101) prime -> . '
    (65) binop -> . BINOP
    (66) binop -> . KBINOP
    (67) binrel -> . BINREL
    (68) binrel -> . KBINREL
    (69) not -> . NOT
    (70) function -> . FUNC
    (82) arrow -> . ARROW
    (83) delimiter -> . DELIMITER
    (84) delimiter -> . KDELIMITER
    (85) accent -> . ACCENT command
    (86) accent -> . ACCENT block
    (87) style -> . STYLE command
    (88) style -> . STYLE block
    (89) dots -> . DOTS
    (90) lim -> . LIM
    (91) lim -> . LIM SUB command
    (92) lim -> . LIM SUB block
    (102) combi -> . choose
    (103) combi -> . binom
    (93) unknown -> . UNKNOWN
    (112) pmod -> . PMOD command
    (113) pmod -> . PMOD block
    (114) lnbrk -> . LINEBREAK
    (10) ord -> . ORD
    (104) choose -> . command CHOOSE command
    (105) choose -> . command CHOOSE block
    (106) choose -> . block CHOOSE command
    (107) choose -> . block CHOOSE block
    (108) binom -> . BINOM command command
    (109) binom -> . BINOM command block
    (110) binom -> . BINOM block command
    (111) binom -> . BINOM block block

    BEGINBLOCK      shift and go to state 10
    FRAC            shift and go to state 8
    CHAR            shift and go to state 44
    ROOT            shift and go to state 26
    BEGARRAY        shift and go to state 5
    COL             shift and go to state 11
    !               shift and go to state 12
    LARGEOP         shift and go to state 19
    '               shift and go to state 15
    BINOP           shift and go to state 46
    KBINOP          shift and go to state 40
    BINREL          shift and go to state 31
    KBINREL         shift and go to state 48
    NOT             shift and go to state 54
    FUNC            shift and go to state 38
    ARROW           shift and go to state 3
    DELIMITER       shift and go to state 37
    KDELIMITER      shift and go to state 13
    ACCENT          shift and go to state 2
    STYLE           shift and go to state 29
    DOTS            shift and go to state 6
    LIM             shift and go to state 25
    UNKNOWN         shift and go to state 35
    PMOD            shift and go to state 47
    LINEBREAK       shift and go to state 34
    ORD             shift and go to state 55
    BINOM           shift and go to state 21

    dots                           shift and go to state 1
    char                           shift and go to state 4
    binrel                         shift and go to state 7
    array                          shift and go to state 9
    lnbrk                          shift and go to state 45
    binom                          shift and go to state 36
    style                          shift and go to state 14
    combi                          shift and go to state 16
    pmod                           shift and go to state 17
    lim                            shift and go to state 18
    accent                         shift and go to state 20
    content                        shift and go to state 22
    start                          shift and go to state 23
    choose                         shift and go to state 24
    scripted                       shift and go to state 27
    function                       shift and go to state 28
    frac                           shift and go to state 30
    binop                          shift and go to state 32
    factorial                      shift and go to state 33
    not                            shift and go to state 39
    ord                            shift and go to state 41
    larop                          shift and go to state 42
    prime                          shift and go to state 43
    delimiter                      shift and go to state 49
    command                        shift and go to state 50
    arrow                          shift and go to state 52
    unknown                        shift and go to state 53
    root                           shift and go to state 56
    col                            shift and go to state 57
    block                          shift and go to state 51

state 1

    (27) command -> dots .

    CHOOSE          reduce using rule 27 (command -> dots .)
    SUP             reduce using rule 27 (command -> dots .)
    SUB             reduce using rule 27 (command -> dots .)
    BEGINBLOCK      reduce using rule 27 (command -> dots .)
    FRAC            reduce using rule 27 (command -> dots .)
    CHAR            reduce using rule 27 (command -> dots .)
    ROOT            reduce using rule 27 (command -> dots .)
    BEGARRAY        reduce using rule 27 (command -> dots .)
    COL             reduce using rule 27 (command -> dots .)
    !               reduce using rule 27 (command -> dots .)
    LARGEOP         reduce using rule 27 (command -> dots .)
    '               reduce using rule 27 (command -> dots .)
    BINOP           reduce using rule 27 (command -> dots .)
    KBINOP          reduce using rule 27 (command -> dots .)
    BINREL          reduce using rule 27 (command -> dots .)
    KBINREL         reduce using rule 27 (command -> dots .)
    NOT             reduce using rule 27 (command -> dots .)
    FUNC            reduce using rule 27 (command -> dots .)
    ARROW           reduce using rule 27 (command -> dots .)
    DELIMITER       reduce using rule 27 (command -> dots .)
    KDELIMITER      reduce using rule 27 (command -> dots .)
    ACCENT          reduce using rule 27 (command -> dots .)
    STYLE           reduce using rule 27 (command -> dots .)
    DOTS            reduce using rule 27 (command -> dots .)
    LIM             reduce using rule 27 (command -> dots .)
    UNKNOWN         reduce using rule 27 (command -> dots .)
    PMOD            reduce using rule 27 (command -> dots .)
    LINEBREAK       reduce using rule 27 (command -> dots .)
    ORD             reduce using rule 27 (command -> dots .)
    BINOM           reduce using rule 27 (command -> dots .)
    $end            reduce using rule 27 (command -> dots .)
    ENDARRAY        reduce using rule 27 (command -> dots .)
    ENDBLOCK        reduce using rule 27 (command -> dots .)


state 2

    (85) accent -> ACCENT . command
    (86) accent -> ACCENT . block
    (11) command -> . frac
    (12) command -> . char
    (13) command -> . root
    (14) command -> . array
    (15) command -> . col
    (16) command -> . factorial
    (17) command -> . larop
    (18) command -> . prime
    (19) command -> . binop
    (20) command -> . binrel
    (21) command -> . not
    (22) command -> . function
    (23) command -> . arrow
    (24) command -> . delimiter
    (25) command -> . accent
    (26) command -> . style
    (27) command -> . dots
    (28) command -> . lim
    (29) command -> . combi
    (30) command -> . unknown
    (31) command -> . pmod
    (32) command -> . lnbrk
    (3) block -> . BEGINBLOCK content ENDBLOCK
    (57) frac -> . FRAC command command
    (58) frac -> . FRAC command block
    (59) frac -> . FRAC block command
    (60) frac -> . FRAC block block
    (8) char -> . CHAR
    (9) char -> . ord
    (61) root -> . ROOT command
    (62) root -> . ROOT block
    (63) root -> . ROOT KDELIMITER content KDELIMITER command
    (64) root -> . ROOT KDELIMITER content KDELIMITER block
    (94) array -> . BEGARRAY row ENDARRAY
    (99) col -> . COL
    (100) factorial -> . !
    (71) larop -> . LARGEOP SUB command SUP command
    (72) larop -> . LARGEOP SUB command SUP block
    (73) larop -> . LARGEOP SUB block SUP command
    (74) larop -> . LARGEOP SUB block SUP block
    (75) larop -> . LARGEOP SUP command SUB command
    (76) larop -> . LARGEOP SUP command SUB block
    (77) larop -> . LARGEOP SUP block SUB command
    (78) larop -> . LARGEOP SUP block SUB block
    (79) larop -> . LARGEOP
    (80) larop -> . LARGEOP SUB command
    (81) larop -> . LARGEOP SUB block
    (101) prime -> . '
    (65) binop -> . BINOP
    (66) binop -> . KBINOP
    (67) binrel -> . BINREL
    (68) binrel -> . KBINREL
    (69) not -> . NOT
    (70) function -> . FUNC
    (82) arrow -> . ARROW
    (83) delimiter -> . DELIMITER
    (84) delimiter -> . KDELIMITER
    (85) accent -> . ACCENT command
    (86) accent -> . ACCENT block
    (87) style -> . STYLE command
    (88) style -> . STYLE block
    (89) dots -> . DOTS
    (90) lim -> . LIM
    (91) lim -> . LIM SUB command
    (92) lim -> . LIM SUB block
    (102) combi -> . choose
    (103) combi -> . binom
    (93) unknown -> . UNKNOWN
    (112) pmod -> . PMOD command
    (113) pmod -> . PMOD block
    (114) lnbrk -> . LINEBREAK
    (10) ord -> . ORD
    (104) choose -> . command CHOOSE command
    (105) choose -> . command CHOOSE block
    (106) choose -> . block CHOOSE command
    (107) choose -> . block CHOOSE block
    (108) binom -> . BINOM command command
    (109) binom -> . BINOM command block
    (110) binom -> . BINOM block command
    (111) binom -> . BINOM block block

    BEGINBLOCK      shift and go to state 10
    FRAC            shift and go to state 8
    CHAR            shift and go to state 44
    ROOT            shift and go to state 26
    BEGARRAY        shift and go to state 5
    COL             shift and go to state 11
    !               shift and go to state 12
    LARGEOP         shift and go to state 19
    '               shift and go to state 15
    BINOP           shift and go to state 46
    KBINOP          shift and go to state 40
    BINREL          shift and go to state 31
    KBINREL         shift and go to state 48
    NOT             shift and go to state 54
    FUNC            shift and go to state 38
    ARROW           shift and go to state 3
    DELIMITER       shift and go to state 37
    KDELIMITER      shift and go to state 13
    ACCENT          shift and go to state 2
    STYLE           shift and go to state 29
    DOTS            shift and go to state 6
    LIM             shift and go to state 25
    UNKNOWN         shift and go to state 35
    PMOD            shift and go to state 47
    LINEBREAK       shift and go to state 34
    ORD             shift and go to state 55
    BINOM           shift and go to state 21

    dots                           shift and go to state 1
    char                           shift and go to state 4
    binrel                         shift and go to state 7
    array                          shift and go to state 9
    lnbrk                          shift and go to state 45
    binom                          shift and go to state 36
    style                          shift and go to state 14
    pmod                           shift and go to state 17
    lim                            shift and go to state 18
    accent                         shift and go to state 20
    combi                          shift and go to state 16
    choose                         shift and go to state 24
    function                       shift and go to state 28
    frac                           shift and go to state 30
    binop                          shift and go to state 32
    factorial                      shift and go to state 33
    not                            shift and go to state 39
    ord                            shift and go to state 41
    larop                          shift and go to state 42
    prime                          shift and go to state 43
    delimiter                      shift and go to state 49
    command                        shift and go to state 58
    arrow                          shift and go to state 52
    unknown                        shift and go to state 53
    root                           shift and go to state 56
    col                            shift and go to state 57
    block                          shift and go to state 59

state 3

    (82) arrow -> ARROW .

    CHOOSE          reduce using rule 82 (arrow -> ARROW .)
    SUP             reduce using rule 82 (arrow -> ARROW .)
    SUB             reduce using rule 82 (arrow -> ARROW .)
    BEGINBLOCK      reduce using rule 82 (arrow -> ARROW .)
    FRAC            reduce using rule 82 (arrow -> ARROW .)
    CHAR            reduce using rule 82 (arrow -> ARROW .)
    ROOT            reduce using rule 82 (arrow -> ARROW .)
    BEGARRAY        reduce using rule 82 (arrow -> ARROW .)
    COL             reduce using rule 82 (arrow -> ARROW .)
    !               reduce using rule 82 (arrow -> ARROW .)
    LARGEOP         reduce using rule 82 (arrow -> ARROW .)
    '               reduce using rule 82 (arrow -> ARROW .)
    BINOP           reduce using rule 82 (arrow -> ARROW .)
    KBINOP          reduce using rule 82 (arrow -> ARROW .)
    BINREL          reduce using rule 82 (arrow -> ARROW .)
    KBINREL         reduce using rule 82 (arrow -> ARROW .)
    NOT             reduce using rule 82 (arrow -> ARROW .)
    FUNC            reduce using rule 82 (arrow -> ARROW .)
    ARROW           reduce using rule 82 (arrow -> ARROW .)
    DELIMITER       reduce using rule 82 (arrow -> ARROW .)
    KDELIMITER      reduce using rule 82 (arrow -> ARROW .)
    ACCENT          reduce using rule 82 (arrow -> ARROW .)
    STYLE           reduce using rule 82 (arrow -> ARROW .)
    DOTS            reduce using rule 82 (arrow -> ARROW .)
    LIM             reduce using rule 82 (arrow -> ARROW .)
    UNKNOWN         reduce using rule 82 (arrow -> ARROW .)
    PMOD            reduce using rule 82 (arrow -> ARROW .)
    LINEBREAK       reduce using rule 82 (arrow -> ARROW .)
    ORD             reduce using rule 82 (arrow -> ARROW .)
    BINOM           reduce using rule 82 (arrow -> ARROW .)
    $end            reduce using rule 82 (arrow -> ARROW .)
    ENDARRAY        reduce using rule 82 (arrow -> ARROW .)
    ENDBLOCK        reduce using rule 82 (arrow -> ARROW .)


state 4

    (12) command -> char .

    CHOOSE          reduce using rule 12 (command -> char .)
    SUP             reduce using rule 12 (command -> char .)
    SUB             reduce using rule 12 (command -> char .)
    BEGINBLOCK      reduce using rule 12 (command -> char .)
    FRAC            reduce using rule 12 (command -> char .)
    CHAR            reduce using rule 12 (command -> char .)
    ROOT            reduce using rule 12 (command -> char .)
    BEGARRAY        reduce using rule 12 (command -> char .)
    COL             reduce using rule 12 (command -> char .)
    !               reduce using rule 12 (command -> char .)
    LARGEOP         reduce using rule 12 (command -> char .)
    '               reduce using rule 12 (command -> char .)
    BINOP           reduce using rule 12 (command -> char .)
    KBINOP          reduce using rule 12 (command -> char .)
    BINREL          reduce using rule 12 (command -> char .)
    KBINREL         reduce using rule 12 (command -> char .)
    NOT             reduce using rule 12 (command -> char .)
    FUNC            reduce using rule 12 (command -> char .)
    ARROW           reduce using rule 12 (command -> char .)
    DELIMITER       reduce using rule 12 (command -> char .)
    KDELIMITER      reduce using rule 12 (command -> char .)
    ACCENT          reduce using rule 12 (command -> char .)
    STYLE           reduce using rule 12 (command -> char .)
    DOTS            reduce using rule 12 (command -> char .)
    LIM             reduce using rule 12 (command -> char .)
    UNKNOWN         reduce using rule 12 (command -> char .)
    PMOD            reduce using rule 12 (command -> char .)
    LINEBREAK       reduce using rule 12 (command -> char .)
    ORD             reduce using rule 12 (command -> char .)
    BINOM           reduce using rule 12 (command -> char .)
    $end            reduce using rule 12 (command -> char .)
    ENDARRAY        reduce using rule 12 (command -> char .)
    ENDBLOCK        reduce using rule 12 (command -> char .)


state 5

    (94) array -> BEGARRAY . row ENDARRAY
    (95) row -> . column LINEBREAK row
    (96) row -> . column
    (97) column -> . content col column
    (98) column -> . content
    (4) content -> . block
    (5) content -> . scripted
    (6) content -> . command
    (7) content -> . content content
    (3) block -> . BEGINBLOCK content ENDBLOCK
    (33) scripted -> . command SUP command
    (34) scripted -> . command SUP block
    (35) scripted -> . block SUP command
    (36) scripted -> . block SUP block
    (37) scripted -> . command SUB command
    (38) scripted -> . command SUB block
    (39) scripted -> . block SUB command
    (40) scripted -> . block SUB block
    (41) scripted -> . command SUP command SUB command
    (42) scripted -> . command SUP command SUB block
    (43) scripted -> . command SUP block SUB command
    (44) scripted -> . command SUP block SUB block
    (45) scripted -> . block SUP command SUB command
    (46) scripted -> . block SUP command SUB block
    (47) scripted -> . block SUP block SUB command
    (48) scripted -> . block SUP block SUB block
    (49) scripted -> . command SUB command SUP command
    (50) scripted -> . command SUB command SUP block
    (51) scripted -> . command SUB block SUP command
    (52) scripted -> . command SUB block SUP block
    (53) scripted -> . block SUB command SUP command
    (54) scripted -> . block SUB command SUP block
    (55) scripted -> . block SUB block SUP command
    (56) scripted -> . block SUB block SUP block
    (11) command -> . frac
    (12) command -> . char
    (13) command -> . root
    (14) command -> . array
    (15) command -> . col
    (16) command -> . factorial
    (17) command -> . larop
    (18) command -> . prime
    (19) command -> . binop
    (20) command -> . binrel
    (21) command -> . not
    (22) command -> . function
    (23) command -> . arrow
    (24) command -> . delimiter
    (25) command -> . accent
    (26) command -> . style
    (27) command -> . dots
    (28) command -> . lim
    (29) command -> . combi
    (30) command -> . unknown
    (31) command -> . pmod
    (32) command -> . lnbrk
    (57) frac -> . FRAC command command
    (58) frac -> . FRAC command block
    (59) frac -> . FRAC block command
    (60) frac -> . FRAC block block
    (8) char -> . CHAR
    (9) char -> . ord
    (61) root -> . ROOT command
    (62) root -> . ROOT block
    (63) root -> . ROOT KDELIMITER content KDELIMITER command
    (64) root -> . ROOT KDELIMITER content KDELIMITER block
    (94) array -> . BEGARRAY row ENDARRAY
    (99) col -> . COL
    (100) factorial -> . !
    (71) larop -> . LARGEOP SUB command SUP command
    (72) larop -> . LARGEOP SUB command SUP block
    (73) larop -> . LARGEOP SUB block SUP command
    (74) larop -> . LARGEOP SUB block SUP block
    (75) larop -> . LARGEOP SUP command SUB command
    (76) larop -> . LARGEOP SUP command SUB block
    (77) larop -> . LARGEOP SUP block SUB command
    (78) larop -> . LARGEOP SUP block SUB block
    (79) larop -> . LARGEOP
    (80) larop -> . LARGEOP SUB command
    (81) larop -> . LARGEOP SUB block
    (101) prime -> . '
    (65) binop -> . BINOP
    (66) binop -> . KBINOP
    (67) binrel -> . BINREL
    (68) binrel -> . KBINREL
    (69) not -> . NOT
    (70) function -> . FUNC
    (82) arrow -> . ARROW
    (83) delimiter -> . DELIMITER
    (84) delimiter -> . KDELIMITER
    (85) accent -> . ACCENT command
    (86) accent -> . ACCENT block
    (87) style -> . STYLE command
    (88) style -> . STYLE block
    (89) dots -> . DOTS
    (90) lim -> . LIM
    (91) lim -> . LIM SUB command
    (92) lim -> . LIM SUB block
    (102) combi -> . choose
    (103) combi -> . binom
    (93) unknown -> . UNKNOWN
    (112) pmod -> . PMOD command
    (113) pmod -> . PMOD block
    (114) lnbrk -> . LINEBREAK
    (10) ord -> . ORD
    (104) choose -> . command CHOOSE command
    (105) choose -> . command CHOOSE block
    (106) choose -> . block CHOOSE command
    (107) choose -> . block CHOOSE block
    (108) binom -> . BINOM command command
    (109) binom -> . BINOM command block
    (110) binom -> . BINOM block command
    (111) binom -> . BINOM block block

    BEGINBLOCK      shift and go to state 10
    FRAC            shift and go to state 8
    CHAR            shift and go to state 44
    ROOT            shift and go to state 26
    BEGARRAY        shift and go to state 5
    COL             shift and go to state 11
    !               shift and go to state 12
    LARGEOP         shift and go to state 19
    '               shift and go to state 15
    BINOP           shift and go to state 46
    KBINOP          shift and go to state 40
    BINREL          shift and go to state 31
    KBINREL         shift and go to state 48
    NOT             shift and go to state 54
    FUNC            shift and go to state 38
    ARROW           shift and go to state 3
    DELIMITER       shift and go to state 37
    KDELIMITER      shift and go to state 13
    ACCENT          shift and go to state 2
    STYLE           shift and go to state 29
    DOTS            shift and go to state 6
    LIM             shift and go to state 25
    UNKNOWN         shift and go to state 35
    PMOD            shift and go to state 47
    LINEBREAK       shift and go to state 34
    ORD             shift and go to state 55
    BINOM           shift and go to state 21

    dots                           shift and go to state 1
    char                           shift and go to state 4
    binrel                         shift and go to state 7
    array                          shift and go to state 9
    lnbrk                          shift and go to state 45
    binom                          shift and go to state 36
    row                            shift and go to state 60
    style                          shift and go to state 14
    pmod                           shift and go to state 17
    lim                            shift and go to state 18
    accent                         shift and go to state 20
    content                        shift and go to state 61
    combi                          shift and go to state 16
    choose                         shift and go to state 24
    scripted                       shift and go to state 27
    function                       shift and go to state 28
    frac                           shift and go to state 30
    binop                          shift and go to state 32
    factorial                      shift and go to state 33
    not                            shift and go to state 39
    ord                            shift and go to state 41
    larop                          shift and go to state 42
    prime                          shift and go to state 43
    column                         shift and go to state 62
    delimiter                      shift and go to state 49
    command                        shift and go to state 50
    arrow                          shift and go to state 52
    unknown                        shift and go to state 53
    root                           shift and go to state 56
    col                            shift and go to state 57
    block                          shift and go to state 51

state 6

    (89) dots -> DOTS .

    SUP             reduce using rule 89 (dots -> DOTS .)
    SUB             reduce using rule 89 (dots -> DOTS .)
    CHOOSE          reduce using rule 89 (dots -> DOTS .)
    BEGINBLOCK      reduce using rule 89 (dots -> DOTS .)
    FRAC            reduce using rule 89 (dots -> DOTS .)
    CHAR            reduce using rule 89 (dots -> DOTS .)
    ROOT            reduce using rule 89 (dots -> DOTS .)
    BEGARRAY        reduce using rule 89 (dots -> DOTS .)
    COL             reduce using rule 89 (dots -> DOTS .)
    !               reduce using rule 89 (dots -> DOTS .)
    LARGEOP         reduce using rule 89 (dots -> DOTS .)
    '               reduce using rule 89 (dots -> DOTS .)
    BINOP           reduce using rule 89 (dots -> DOTS .)
    KBINOP          reduce using rule 89 (dots -> DOTS .)
    BINREL          reduce using rule 89 (dots -> DOTS .)
    KBINREL         reduce using rule 89 (dots -> DOTS .)
    NOT             reduce using rule 89 (dots -> DOTS .)
    FUNC            reduce using rule 89 (dots -> DOTS .)
    ARROW           reduce using rule 89 (dots -> DOTS .)
    DELIMITER       reduce using rule 89 (dots -> DOTS .)
    KDELIMITER      reduce using rule 89 (dots -> DOTS .)
    ACCENT          reduce using rule 89 (dots -> DOTS .)
    STYLE           reduce using rule 89 (dots -> DOTS .)
    DOTS            reduce using rule 89 (dots -> DOTS .)
    LIM             reduce using rule 89 (dots -> DOTS .)
    UNKNOWN         reduce using rule 89 (dots -> DOTS .)
    PMOD            reduce using rule 89 (dots -> DOTS .)
    LINEBREAK       reduce using rule 89 (dots -> DOTS .)
    ORD             reduce using rule 89 (dots -> DOTS .)
    BINOM           reduce using rule 89 (dots -> DOTS .)
    $end            reduce using rule 89 (dots -> DOTS .)
    ENDARRAY        reduce using rule 89 (dots -> DOTS .)
    ENDBLOCK        reduce using rule 89 (dots -> DOTS .)


state 7

    (20) command -> binrel .

    CHOOSE          reduce using rule 20 (command -> binrel .)
    SUP             reduce using rule 20 (command -> binrel .)
    SUB             reduce using rule 20 (command -> binrel .)
    BEGINBLOCK      reduce using rule 20 (command -> binrel .)
    FRAC            reduce using rule 20 (command -> binrel .)
    CHAR            reduce using rule 20 (command -> binrel .)
    ROOT            reduce using rule 20 (command -> binrel .)
    BEGARRAY        reduce using rule 20 (command -> binrel .)
    COL             reduce using rule 20 (command -> binrel .)
    !               reduce using rule 20 (command -> binrel .)
    LARGEOP         reduce using rule 20 (command -> binrel .)
    '               reduce using rule 20 (command -> binrel .)
    BINOP           reduce using rule 20 (command -> binrel .)
    KBINOP          reduce using rule 20 (command -> binrel .)
    BINREL          reduce using rule 20 (command -> binrel .)
    KBINREL         reduce using rule 20 (command -> binrel .)
    NOT             reduce using rule 20 (command -> binrel .)
    FUNC            reduce using rule 20 (command -> binrel .)
    ARROW           reduce using rule 20 (command -> binrel .)
    DELIMITER       reduce using rule 20 (command -> binrel .)
    KDELIMITER      reduce using rule 20 (command -> binrel .)
    ACCENT          reduce using rule 20 (command -> binrel .)
    STYLE           reduce using rule 20 (command -> binrel .)
    DOTS            reduce using rule 20 (command -> binrel .)
    LIM             reduce using rule 20 (command -> binrel .)
    UNKNOWN         reduce using rule 20 (command -> binrel .)
    PMOD            reduce using rule 20 (command -> binrel .)
    LINEBREAK       reduce using rule 20 (command -> binrel .)
    ORD             reduce using rule 20 (command -> binrel .)
    BINOM           reduce using rule 20 (command -> binrel .)
    $end            reduce using rule 20 (command -> binrel .)
    ENDARRAY        reduce using rule 20 (command -> binrel .)
    ENDBLOCK        reduce using rule 20 (command -> binrel .)


state 8
